<resources>
    <string name="app_name">Photoristic</string>
    <string name="action_settings">Settings</string>

    <string name="google_maps_key">AIzaSyDBzNskqcPn0pBDliULF-jjxzHMtbUb6Zw</string>
    <string name="EXIF_UNKNOWN">Unknown</string>
    <string name="ADD_LOCATION">Add Location</string>
    <string name="CHANGE_LOCATION">Change Location</string>
    <string name="title">Title</string>
    <string name="title_description">Title Description</string>
    <string name="description">Description</string>
    <string name="description_desc">Description desc</string>
    <string name="date">Date</string>
    <string name="time_description">Time description</string>
    <string name="change_location">Change Location</string>
    <string name="send_data">Send data</string>
    <string name="update">Update</string>
</resources>
