<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_update_data"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_popup_sync" />

    <LinearLayout
        android:id="@+id/linearLayout_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/map_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="5">

        <TextView
            android:id="@+id/image_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.5"
            android:text="@string/title" />


        <EditText
            android:id="@+id/edit_image_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:text="@string/title_description"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/image_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/description" />

        <EditText
            android:id="@+id/edit_image_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:inputType="textPersonName"
            android:text="@string/description_desc"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/image_time"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/date" />

        <EditText
            android:id="@+id/edit_image_time"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:inputType="textPersonName"
            android:text="@string/time_description"
            android:textSize="14sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/map_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/buttons_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_image"
        app:layout_constraintVertical_weight="4"
        android:visibility="invisible"
        >
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map_single_fragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            tools:context="com.example.uni.photoristic.ShowImageDetailsActivity"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_layout"
        app:layout_constraintVertical_weight="1"
        >

        <Button
            android:id="@+id/change_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/change_location"
            android:textSize="8sp" />
        <Button
            android:id="@+id/send_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="8sp"
            android:text="@string/send_data"
            />
        <Button
            android:id="@+id/update_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="8sp"
            android:text="@string/update"
            />
    </LinearLayout>





</android.support.constraint.ConstraintLayout>